Modulo paciente y médicos listos
ya da los filtros y exportar falta modificar el excel pero nada mas